--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "BMI Calcuator with NodeJS and ExpressJS",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "nodejs",
@@ -15,10 +15,14 @@
   ],
   "author": "Nihad Keric",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "chalk": "^2.3.0",
+    "jest": "^22.0.0",
+    "prettier": "^1.9.2",
+    "puppeteer": "^2.0.0",
+    "rimraf": "^2.6.2",
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.7",
-    "express": "^4.15.4",
-    "puppeteer": "^2.0.0"
+    "express": "^4.15.4"
   }
 }
